--- a/loading.html
+++ b/loading.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="./js/dynamic.js"></script>
 </head>
 <body>
+	<div class="loading"><span></span></div>
 	<div class="wrapper">
 		<div class="top">
 			<img src="./images/logo.png" class="logo" width="214" height="36" alt="">
