--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
 	<title>autoparts</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<link href="./favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="./style.css" rel="stylesheet" type="text/css" title="compact">
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,700&subset=latin,cyrillic" rel="stylesheet" type="text/css" title="compact">
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic&subset=latin,cyrillic" rel="stylesheet" type="text/css" title="compact">
