--- a/search.html
+++ b/search.html
@@ -165,6 +165,131 @@
 								</li>
 							</ul>
 						</li>
+						<li class="green">
+							<ul>
+								<li class="company"><a href="#">BMW</a></li>
+								<li class="serial">G569-25-155</li>
+								<li class="description">
+									<span>Подшипник шариковые радиальный...</span>
+									<button class="text"></button>
+									<button class="photo"></button>
+									<div>
+										<div>
+											<div>
+												<p>Подшипник шариковые радиальны однорядный универсального применения модель 105ЮТ</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="quantity">6</li>
+								<li class="deliverytime">1-2 дн.</li>
+								<li class="price">
+									<span>687 руб.</span>
+									<input type="text" value="1">
+									<button class="addbasket"></button>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<ul>
+								<li class="company"><a href="#">BMW</a></li>
+								<li class="serial">G569-25-155</li>
+								<li class="description">
+									<span>Подшипник шариковые радиальный...</span>
+									<button class="text"></button>
+									<button class="photo"></button>
+									<div>
+										<div>
+											<div>
+												<p>Подшипник шариковые радиальны однорядный универсального применения модель 105ЮТ</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="quantity">6</li>
+								<li class="deliverytime">1-2 дн.</li>
+								<li class="price">
+									<span>687 руб.</span>
+									<input type="text" value="1">
+									<button class="addbasket"></button>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<ul>
+								<li class="company"><a href="#">BMW</a></li>
+								<li class="serial">G569-25-155</li>
+								<li class="description">
+									<span>Подшипник шариковые радиальный...</span>
+									<button class="text"></button>
+									<button class="photo"></button>
+									<div>
+										<div>
+											<div>
+												<p>Подшипник шариковые радиальны однорядный универсального применения модель 105ЮТ</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="quantity">6</li>
+								<li class="deliverytime">1-2 дн.</li>
+								<li class="price">
+									<span>687 руб.</span>
+									<input type="text" value="1">
+									<button class="addbasket"></button>
+								</li>
+							</ul>
+						</li>
+						<li class="green">
+							<ul>
+								<li class="company"><a href="#">BMW</a></li>
+								<li class="serial">G569-25-155</li>
+								<li class="description">
+									<span>Подшипник шариковые радиальный...</span>
+									<button class="text"></button>
+									<button class="photo"></button>
+									<div>
+										<div>
+											<div>
+												<p>Подшипник шариковые радиальны однорядный универсального применения модель 105ЮТ</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="quantity">6</li>
+								<li class="deliverytime">1-2 дн.</li>
+								<li class="price">
+									<span>687 руб.</span>
+									<input type="text" value="1">
+									<button class="addbasket"></button>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<ul>
+								<li class="company"><a href="#">BMW</a></li>
+								<li class="serial">G569-25-155</li>
+								<li class="description">
+									<span>Подшипник шариковые радиальный...</span>
+									<button class="text"></button>
+									<button class="photo"></button>
+									<div>
+										<div>
+											<div>
+												<p>Подшипник шариковые радиальны однорядный универсального применения модель 105ЮТ</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="quantity">6</li>
+								<li class="deliverytime">1-2 дн.</li>
+								<li class="price">
+									<span>687 руб.</span>
+									<input type="text" value="1">
+									<button class="addbasket"></button>
+								</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</div>
